Change: Home and work section

--- a/index-particles.html
+++ b/index-particles.html
@@ -132,7 +132,7 @@
                         <li id="serv" class="nav-item">
                             <a href="#serv-cont" data-value="serv-cont">
                             <i class="icon-layers" hidden></i>
-                                <span class="name-menu">Services</span>
+                                <span class="name-menu">Work</span>
                             </a>
                         </li>
                         <li id="work" class="nav-item">
@@ -181,7 +181,7 @@
         <section id="home-cont" class="home1 home">
             <div id="particles-js" class="particles">
                 <div class="title">
-                    <h1 class="text-uppercase"><strong>Reva</strong> Smith</h1>
+                    <h1 class="text-uppercase"><strong>Aditya</strong> Harsh</h1>
                     <p class="type"></p>  <!-- You Can Edit the title on the custom.js File -->
                     <div class="btn-home">
                         <a href="#work-cont">Portfolio</a>
@@ -244,9 +244,8 @@
 
                                 <!-- Start About Me Tab -->
                                 <div class="tab-pane fade show active text-left" id="aboutme" role="tabpanel" aria-labelledby="about-tab">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua labo ris nisi ut aliquip ex ea commodo consequat.</p>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                    <p>Hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+                                    <p>I am a machine learning engineer. I graduated from University of Petroleum and Energy Studies in May 2018 majoring in Computer Science with concentration in Machine Intelligence. I love coding and solving mathematical problems.</p>
+                                    <p>I work on building Machine Learning Models to support various business objectives and decisions. Further, I am also involved in contributing to open source projects for different communities.</p>
                                     <img src="images/signature.png" class="img-fluid signature" alt="signature"/>
                                     <!-- Here image Signature -->
                                 </div>
@@ -256,11 +255,11 @@
 
                                 <!-- Start Profile Tab -->
                                 <div class="tab-pane fade text-left profile" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                                    <h6><span class="title-info">Name :</span><span>Reva Smith</span></h6> <!-- Edit Your Name  -->
-                                    <h6><span class="title-info">Nationality : </span><span>Moroccan</span></h6> <!-- Edit Your Nationality  -->
-                                    <h6><span class="title-info">Email : </span><span>reva@email.com</span></h6> <!-- Edit Your Email  -->
-                                    <h6><span class="title-info">Date of birth : </span><span>09-30-1991</span></h6> <!-- Edit Your Date Of Birth  -->
-                                    <h6><span class="title-info">Phone : </span><span>+123 456 7890</span></h6> <!-- Edit Your Phone -->
+                                    <h6><span class="title-info">Name :</span><span>Aditya Harsh</span></h6> <!-- Edit Your Name  -->
+                                    <h6><span class="title-info">Email : </span><span>adityasiwan@email.com</span></h6> <!-- Edit Your Email  -->
+                                    <h6><span class="title-info">Github : </span><span>https://github.com/adityasiwan</span></h6> <!-- Edit Your Github Link  -->
+                                    <h6><span class="title-info">LinkedIn : </span><span>https://www.linkedin.com/in/adityasiwan/</span></h6> <!-- Edit Your Nationality  -->
+                                    <h6><span class="title-info">Phone : </span><span>+91-73518-19758</span></h6> <!-- Edit Your Phone -->
 
                                     <div class="btn-about">
                                         <a href="#">Download Resume</a>
@@ -273,25 +272,25 @@
                                 <!-- Start Skills Tab -->
                                 <div class="tab-pane fade skill" id="skill" role="tabpanel" aria-labelledby="skill-tab">
                                     <div class="skills">
-                                        <p class="progress-text">Html</p> <!-- Here You Can Edit The Name Of Skill -->
+                                        <p class="progress-text">Languages - Python, C++, C</p> <!-- Here You Can Edit The Name Of Skill -->
+                                        <div class="progress">
+                                            <div class="progress-bar" data-present="90%"></div> <!-- Here You Can Edit The Percentage -->
+                                        </div>
+                                        <p class="progress-text">Cloud Technologies - AWS, Heroku </p> <!-- Here You Can Edit The Name Of Skill -->
                                         <div class="progress">
                                             <div class="progress-bar" data-present="85%"></div> <!-- Here You Can Edit The Percentage -->
                                         </div>
-                                        <p class="progress-text">Photoshop</p> <!-- Here You Can Edit The Name Of Skill -->
+                                        <p class="progress-text">Libraries - Django, Numpy, Pandas, Scikit-Learn</p> <!-- Here You Can Edit The Name Of Skill -->
+                                        <div class="progress">
+                                            <div class="progress-bar" data-present="75%"></div> <!-- Here You Can Edit The Percentage -->
+                                        </div>
+                                        <p class="progress-text">Database - MongoDB, SQLite</p> <!-- Here You Can Edit The Name Of Skill -->
                                         <div class="progress">
                                             <div class="progress-bar" data-present="70%"></div> <!-- Here You Can Edit The Percentage -->
                                         </div>
-                                        <p class="progress-text">Javascript</p> <!-- Here You Can Edit The Name Of Skill -->
-                                        <div class="progress">
-                                            <div class="progress-bar" data-present="60%"></div> <!-- Here You Can Edit The Percentage -->
-                                        </div>
-                                        <p class="progress-text">Php</p> <!-- Here You Can Edit The Name Of Skill -->
-                                        <div class="progress">
-                                            <div class="progress-bar" data-present="80%"></div> <!-- Here You Can Edit The Percentage -->
-                                        </div>
                                     </div>
                                     <div class="btn-about">
-                                        <a href="#contact-cont">Hire me</a>
+                                        <a href="#contact-cont">Contact me</a>
                                     </div>
                                 </div>
                                 <!-- End Skills Tab -->
@@ -308,7 +307,7 @@
         <!-- Start Services -->
         <section id="serv-cont" class="serv">
             <div class="title">
-                <h1 class="kaushan">Services</h1>
+                <h1 class="kaushan">Work Experience</h1>
             </div>
             <div class="container">
                 <div class="row">
@@ -318,15 +317,16 @@
                                 <div class="col-lg-6">
                                     <div class="content">
                                         <img src="images/icons/processing.png" alt="serv1" />
-                                        <h4>Web Development</h4>
-                                        <p>Lorem ipsum dolor sit amet, con sectetur adipiscing elit, sed do tempor .</p>
+                                        <h4>Software Engineer | HeyMojo Inc. | Gurgaon, India</h4>
+                                        <p>Improved the performance of intent classification by implementing multiple models (Word2Vec, fastText, LSTM) which helped in making the chatbot more robust .</p>
+                                        <p>Designed and implemented a backend API for the automation of chatbot creation for hotel .</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="content">
                                         <img src="images/icons/browser.png" alt="serv1" />
-                                        <h4>Management</h4>
-                                        <p>Lorem ipsum dolor sit amet, con sectetur adipiscing elit, sed do tempor .</p>
+                                        <h4>Research Intern | Indian Institute of Technology, Patna, India</h4>
+                                        <p>Developed a new automatic clustering technique based on fusion of multiobjective differential evolution and SOM that successfully beat some of the popular algorithms like VAMOSA and MOCK when used on text clustering .</p>
                                     </div>
                                 </div>
                             </div>
@@ -334,15 +334,17 @@
                                 <div class="col-lg-6">
                                     <div class="content">
                                         <img src="images/icons/instagram.png" alt="serv1" />
-                                        <h4>Photography</h4>
-                                        <p>Lorem ipsum dolor sit amet, con sectetur adipiscing elit, sed do tempor .</p>
+                                        <h4>Project Reviewer | Udacity Inc., US </h4>
+                                        <p>Review code and provide feedback to Udacity students on Machine Learning projects .</p>
+                                        <p>Provides feedback to Udacity on projects including clarification/support for student queries .</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="content">
                                         <img src="images/icons/support.png" alt="serv1" />
-                                        <h4>Support</h4>
-                                        <p>Lorem ipsum dolor sit amet, con sectetur adipiscing elit, sed do tempor .</p>
+                                        <h4>Open Source Community Member | DuckDuckGo Inc., US </h4>
+                                        <p>Creating search engine plugin (Instant Answer module) for DuckDuckGo .</p>
+                                        <p>Designed cheat sheet for Anaconda and C++ Vectors for DuckDuckGo written in JSON & Perl .</p>
                                     </div>
                                 </div>
                             </div>
