Add: quote page

--- a/index-particles.html
+++ b/index-particles.html
@@ -144,7 +144,7 @@
                         <li id="testim" class="nav-item">
                             <a href="#testim-cont" data-value="testim-cont">
                             <i class="icon-speech" hidden></i>
-                                <span class="name-menu">Testimonials</span>
+                                <span class="name-menu">Quotes</span>
                             </a>
                         </li>
                         <li id="contact" class="nav-item">
@@ -156,11 +156,11 @@
                     </ul>
                 </div>
                 <div class="social-media">
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a> <!-- You Can Edit the link here -->
-                    <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a> <!-- You Can Edit the link here -->
-                    <a href="https://www.tumblr.com/" target="_blank"><i class="fab fa-tumblr"></i></a> <!-- You Can Edit the link here -->
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a> <!-- You Can Edit the link here -->
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a> <!-- You Can Edit the link here -->
+                    <a href="https://github.com/adityasiwan/" target="_blank"><i class="fab fa-github"></i></a> <!-- You Can Edit the link here -->
+                    <a href="https://www.linkedin.com/in/adityasiwan/" target="_blank"><i class="fab fa-linkedin"></i></a> <!-- You Can Edit the link here -->
+                    <a href="https://www.facebook.com/adityasiwan" target="_blank"><i class="fab fa-facebook"></i></a> <!-- You Can Edit the link here -->
+                    <a href="https://www.instagram.com/apex_predator18/" target="_blank"><i class="fab fa-instagram"></i></a> <!-- You Can Edit the link here -->
+                    <a href="https://plus.google.com/u/0/100360484135751242028" target="_blank"><i class="fab fa-google"></i></a> <!-- You Can Edit the link here -->
                 </div>
                 <div class="collapse-menu">
                     <span class="collapse-icon closed-menu"></span>
@@ -352,7 +352,7 @@
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <div class="serv-vid bg-image">
-                            <a class="play video" href="https://www.youtube.com/watch?v=96kI8Mp1uOU"> <!-- you can edit the link here -->
+                            <a class="play video" href="https://www.youtube.com/watch?v=24kRv1c0PiU"> <!-- you can edit the link here -->
                                 <i class="fas fa-play"></i>
                             </a>
                         </div>
@@ -562,7 +562,7 @@
         <!-- Start Testimonials -->
         <section id="testim-cont" class="testim">
             <div class="title">
-                <h1 class="kaushan">Testimonials</h1>
+                <h1 class="kaushan">Quotes</h1>
             </div>
             <div class="container">
                 <div class="tabbable tabs-left">
@@ -613,8 +613,8 @@
                             </div>
                             <div class="profile-details">
                                 <i class="fas fa-quote-left"></i>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <h4>John Doe</h4>
+                                <p>You have to dream before your dreams can come true.</p>
+                                <h4>Dr. A.P.J Abdul Kalam</h4>
                                 <i class="fas fa-quote-right"></i>
                             </div>
                         </div>
@@ -626,8 +626,8 @@
                             </div>
                             <div class="profile-details">
                                 <i class="fas fa-quote-left"></i>
-                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-                                <h4>Joshua Earle</h4>
+                                <p>Do I not destroy my enemies when I make them my friends?</p>
+                                <h4>Abraham Lincoln</h4>
                                 <i class="fas fa-quote-right"></i>
                             </div>
                         </div>
@@ -639,8 +639,8 @@
                             </div>
                             <div class="profile-details">
                                 <i class="fas fa-quote-left"></i>
-                                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
-                                <h4>Matthew Dix</h4>
+                                <p>Education is the most powerful weapon which you can use to change the world.</p>
+                                <h4>Nelson Mandela</h4>
                                 <i class="fas fa-quote-right"></i>
                             </div>
                         </div>
@@ -652,8 +652,8 @@
                             </div>
                             <div class="profile-details">
                                 <i class="fas fa-quote-left"></i>
-                                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p>
-                                <h4>Mike Petrucci</h4>
+                                <p>It is Important to Follow your Dreams and Heart. Do Something that Excites You.</p>
+                                <h4>Sundar Pichai</h4>
                                 <i class="fas fa-quote-right"></i>
                             </div>
                         </div>
@@ -665,8 +665,8 @@
                             </div>
                             <div class="profile-details">
                                 <i class="fas fa-quote-left"></i>
-                                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
-                                <h4>Lauren Dix</h4>
+                                <p>Our industry does not respect tradition – it only respects innovation.</p>
+                                <h4>Satya Nadella</h4>
                                 <i class="fas fa-quote-right"></i>
                             </div>
                         </div>
@@ -681,19 +681,19 @@
                 <div class="logos">
                     <div class="row">
                         <div class="col-lg-2 col-md-4 col-6">
-                            <img src="http://via.placeholder.com/60x80" alt="brand 1">
+                            <img src="images/quote_footer1.png" alt="brand 1">
                         </div>
                         <div class="col-lg-2 col-md-4 col-6">
-                            <img src="http://via.placeholder.com/60x80" alt="brand 2">
+                            <img src="images/quote_footer2.png" alt="brand 2">
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                            <img src="http://via.placeholder.com/60x80" alt="brand 3">
+                            <img src="images/quote_footer3.png" alt="brand 3">
                         </div>
                         <div class="col-lg-2 col-md-4 col-6">
-                            <img src="http://via.placeholder.com/60x80" alt="brand 4">
+                            <img src="images/quote_footer4.png" alt="brand 4">
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 last">
-                            <img src="http://via.placeholder.com/60x80" alt="brand 5">
+                            <img src="images/quote_footer5.png" alt="brand 5">
                         </div>
                     </div>
                 </div>
@@ -749,18 +749,18 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="infos background-gradient">
-                        <h2 class="text-uppercase kaushan">Reva</h2>
+                        <h2 class="text-uppercase kaushan">Aditya</h2>
                         <div class="email">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:reva@email.com">reva@email.com</a>
+                            <a href="mailto:adityasiwan@gmail.com">adityasiwan@gmail.com</a>
                         </div>
                         <div class="phone">
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+1234567899">+123 456 7899</a>
+                            <a href="tel:+917351819758">+91 73518 19758</a>
                         </div>
                         <div class="address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>123 Street Name, City , 32008</span>
+                            <span>Sector 48, Gurugram, 122018</span>
                         </div>
                     </div>
                 </div>
@@ -772,7 +772,7 @@
                 </div>
                 <div class="google-wrapper">
                     <div id="google-map"> <!-- You Can Add Your Location Here Just Go To Google Map And Emped Map and past it down v -->
-                        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d162778.81964475298!2d-73.93891815355539!3d40.703660465248056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY!5e0!3m2!1sen!2s!4v1491335061565"></iframe>
+                        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3274.068139041069!2d77.03524642165117!3d28.417449030944585!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1536672316178"></iframe>
                     </div>
                 </div>
             </div>
@@ -780,8 +780,7 @@
             <!-- Start Footer -->
 
             <footer>
-                <p>© Copyright 2018. </p>
-                <p>All Right Reserved By <a href="https://themeforest.net/user/bouthythemes/portfolio" target="_blank">BouthyThemes</a></p>
+                <p>© Copyright 2018 Aditya Harsh. </p>
             </footer>
 
             <!-- End Footer -->
