--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- title -->
-        <title>Reva - One Page Responsive Template</title>
+        <title>Aditya Harsh</title>
 
         <!-- stylesheet -->
         <link rel="stylesheet" href="css/fontawesome-all.min.css" />
@@ -280,7 +280,7 @@
                                         <div class="progress">
                                             <div class="progress-bar" data-present="85%"></div> <!-- Here You Can Edit The Percentage -->
                                         </div>
-                                        <p class="progress-text">Libraries - Django, Numpy, Pandas, Scikit-Learn</p> <!-- Here You Can Edit The Name Of Skill -->
+                                        <p class="progress-text">Libraries - Django, Numpy, Pandas</p> <!-- Here You Can Edit The Name Of Skill -->
                                         <div class="progress">
                                             <div class="progress-bar" data-present="75%"></div> <!-- Here You Can Edit The Percentage -->
                                         </div>
