--- a/index-dev.html
+++ b/index-dev.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
 
+
         <!-- meta Data -->
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -32,6 +33,7 @@
 
         <script>
             // Ajax function
+
 
             function _(id) {
 
@@ -76,6 +78,11 @@
         </script>
     </head>
     <body>
+    	<div class="container">
+  			<div class="alert alert-warning" align="center">
+    			<p>This website has not been updated since 2019. You may reach out to me at contact@adityaharsh.com</p>
+  			</div>
+		</div>
 
         <!-- Start Section Tool Box -->
 
@@ -135,12 +142,6 @@
                                 <span class="name-menu">Work</span>
                             </a>
                         </li>
-                        <li id="work" class="nav-item">
-                            <a href="#work-cont" data-value="work-cont">
-                            <i class="icon-picture" hidden></i>
-                                <span class="name-menu">Portfolio</span>
-                            </a>
-                        </li>
                         <li id="testim" class="nav-item">
                             <a href="#testim-cont" data-value="testim-cont">
                             <i class="icon-speech" hidden></i>
@@ -183,9 +184,6 @@
                 <div class="title">
                     <h1 class="text-uppercase"><strong>Aditya</strong> Harsh</h1>
                     <p class="type"></p>  <!-- You Can Edit the title on the custom.js File -->
-                    <div class="btn-home">
-                        <a href="#work-cont">Portfolio</a>
-                    </div>
                 </div>
             </div>
         </section>
@@ -364,199 +362,6 @@
         <!-- End Services -->
 
 
-        <!-- Start Work -->
-        <section id="work-cont" class="work">
-            <div class="title">
-                <h1 class="kaushan">Portfolio</h1>
-            </div>
-            <div class="container">
-                <div class="shuffle">
-                    <ul class="list-unstyled">
-                        <li data-class="all" class="active item">All</li>
-                        <li data-class=".web" class="item">Web Design</li>
-                        <li data-class=".graphic" class="item">Graphic Design</li>
-                        <li data-class=".marketing" class="item">Marketing</li>
-                    </ul>
-                </div>
-                <div class="gallery">
-                    <div class="row">
-                        <!-- Start Image Number 1 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item marketing">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Marketing</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 1 -->
-                        <!-- ===================== -->
-                        <!-- Start Image Number 2 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item graphic">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Graphic Design</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 2 -->
-                        <!-- ===================== -->
-                        <!-- Start Image Number 3 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item web">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Web Design</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 3 -->
-                        <!-- ===================== -->
-                        <!-- Start Image Number 4 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item marketing">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Marketing</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 4 -->
-                        <!-- ===================== -->
-                        <!-- Start Image Number 5 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item web">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Web Design</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 5 -->
-                        <!-- ===================== -->
-                        <!-- Start Image Number 6 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item graphic">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Graphic Design</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 6 -->
-                        <!-- ===================== -->
-                        <!-- Start Image Number 7 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item marketing less">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Marketing</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 7 -->
-                        <!-- ===================== -->
-                        <!-- Start Image Number 8 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item graphic less">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Graphic Design</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 8 -->
-                        <!-- ===================== -->
-                        <!-- Start Image Number 9 -->
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="item web less">
-                                <div class="over">
-                                    <div class="info-img">
-                                        <h4>Title Projet</h4>
-                                        <span>Web Design</span>
-                                    </div>
-                                    <a class="image" href="http://via.placeholder.com/4000x3500">
-                                            <!-- ^ And Here -->
-                                        <i class="fa fa-arrows-alt"></i>
-                                    </a>
-                                </div>
-                                <img src="http://via.placeholder.com/4000x3500" alt="imgPort1" class="img-fluid">
-                                        <!-- Here ^ You Can Change image And Up -->
-                            </div>
-                        </div>
-                        <!-- End Image Number 9 -->
-                        <!-- You can add more images here.. -->
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- End Work -->
 
 
         <!-- Start Testimonials -->
