--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
                 <div class="row">
                     <div class="col-md-10 col-lg-6">
-                        <div class="about-img bg-image"></div>
+                        <img src="images/adi11.JPG" width="500" height="500">
                         <!-- go to main.scss file to edit personal image -->
                     </div>
                     <div class="col-md-12 col-lg-6">
