--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
                                 <!-- Start Profile Tab -->
                                 <div class="tab-pane fade text-left profile" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                                     <h6><span class="title-info">Name :</span><span>Aditya Harsh</span></h6> <!-- Edit Your Name  -->
-                                    <h6><span class="title-info">Email : </span><span>adityasiwan@email.com</span></h6> <!-- Edit Your Email  -->
+                                    <h6><span class="title-info">Email : </span><span>contact@adityaharsh.com</span></h6> <!-- Edit Your Email  -->
                                     <h6><span class="title-info">Github : </span><span>https://github.com/adityasiwan</span></h6> <!-- Edit Your Github Link  -->
                                     <h6><span class="title-info">LinkedIn : </span><span>https://www.linkedin.com/in/adityasiwan/</span></h6> <!-- Edit Your Nationality  -->
-                                    <h6><span class="title-info">Phone : </span><span>+91-73518-19758</span></h6> <!-- Edit Your Phone -->
+                                    <h6><span class="title-info">Phone : </span><span>+91-790-690-9720</span></h6> <!-- Edit Your Phone -->
 
                                     <div class="btn-about">
                                         <a href="#">Download Resume</a>
@@ -565,7 +565,7 @@
                         </div>
                         <div class="address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>RT Nagar, Bangalore, 560032</span>
+                            <span>Bangalore, 560032</span>
                         </div>
                     </div>
                 </div>
