--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <body>
     	<div class="container">
   			<div class="alert alert-warning" align="center">
-    			<p>This website has not been updated since 2019. You may reach out to me at contact@adityaharsh.com</p>
+    			<p>This website has not been updated since 2019. You may reach out to me at contact@adityaharsh.space</p>
   			</div>
 		</div>
 
